"""Top-level Bazel module file for the SQ5 Fan Dub project repo."""

bazel_dep(name = "rules_sci", version = "0.0.1")
bazel_dep(name = "toolchains_scinc", version = "0.0.1")

scinc_release = use_extension(
  "@toolchains_scinc//toolchain/extensions:release.bzl",
  "scinc_release",
  dev_dependency = True
)

use_repo(scinc_release, "scinc_release")

register_toolchains(
  "@scinc_release//:scinc_toolchain",
)

# For local development, you can uncomment the following lines to use a local
# version of the rules_sci and sci_compiler repositories.
#
# local_path_override(
#   module_name = "rules_sci",
#   path = "../rules_sci",
# )

# bazel_dep(name = "sci_compiler")

# local_path_override(
#   module_name = "sci_compiler",
#   path = "../da-sci-compiler-pub",
# )

# register_toolchains(
#   "@sci_compiler//toolchain:updated_sci_compiler_toolchain",
# )