load("@rules_sci//sci:sci.bzl", "sci_script")

package(
    default_visibility = ["//patches:__subpackages__"],
)

sci_script(
    name = "main",
    src = "Main.sc",
    script_num = 0,
)

sci_script(
    name = "messager",
    src = "Messager.sc",
    script_num = 924,
)

sci_script(
    name = "talker",
    src = "Talker.sc",
    script_num = 928,
)
